--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -9,7 +9,7 @@
                 </a>
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Banners
                 </a>
@@ -17,7 +17,7 @@
                   <li><a class="dropdown-item" href="#">Banners</a></li>
                   <li><a class="dropdown-item" href="#">Add Banner</a></li>
                 </ul>
-            </li>
+            </li> -->
 
             <li class="nav-item">
                 <a class="nav-link" href="/admin/users/">
@@ -73,6 +73,13 @@
                   <li><a class="dropdown-item" href="/admin/product-offers/"> Product Offers</a></li>
                   <li><a class="dropdown-item" href="/admin/category-offers/"> Category Offers</a></li>
                 </ul>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/returns/">
+                    <!-- <i class="bi bi-bell"></i> -->
+                    Return
+                </a>
             </li>
 
             <li class="nav-item">
