--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -28,11 +28,11 @@
                             </div>
                             </li>
                                 <li>
-                                    <a href="" class="sf-with-ul">About</a>
+                                    <a href="/about" class="sf-with-ul">About</a>
 
                                 </li>
                                 <li>
-                                    <a href="" class="sf-with-ul">Contact</a>
+                                    <a href="/contact" class="sf-with-ul">Contact</a>
 
                                     
                                 </li>
