--- a/views/admin/orders/orders.ejs
+++ b/views/admin/orders/orders.ejs
@@ -21,62 +21,71 @@
   </div>
 </section>
 
-<div class="container d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2"><%= locals.title ? locals.title : 'Dashboard' %></h1>
+
+<div
+  class="container d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">
+    <%= locals.title ? locals.title : 'Order Management' %>
+  </h1>
   <header class=" text-center mb-20">
-    <form action="/admin/orders/" method="get" class="d-inline">
-      <div class="input-group input-group-sm border bg-success rounded-pill" style="width: 500px;">
-        <input type="text" class="form-control border-0 bg-white rounded-pill" placeholder="Search orders..." name="search">
-        <button class="btn border-0 btn-outline-success text-white rounded-pill" type="submit">Search</button>
+    <form action="/admin/products/" method="get" class="d-inline">
+      <div class="input-group input-group-sm border bg-dark rounded-pill" style="width: 500px;">
+        <input type="text" class="form-control border-0 bg-white rounded-pill" placeholder="Search coupons..."
+          name="search">
+        <button class="btn border-0 btn-outline-dark text-white rounded-pill" type="submit">Search</button>
       </div>
     </form>
   </header>
+
 </div>
 
+
+
 <section class="container my-5">
-    <div class="container table-responsive text-capitalize">
-        <table class="table table-striped table-hover ">
-            <thead>
-                <tr class="text-center">
-                    <th scope="col">#</th>
-                    <th scope="col">Order Id</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Image</th>
-                    <th scope="col">Product</th>
-                    <th scope="col">User</th>
-                    <th scope="col">Payment</th>
-                    
-                    <th scope="col">Order Status</th>
-                    <!-- <th>Payment Status</th> -->
-                    <th scope="col">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-              <% if (orders && orders.length > 0) { %>
-                <% orders?.forEach((order,index) => { %>
-                    <tr class="align-middle text-center">
-                        <td><%- index+1 %></td>
-                        <td>#<%- order._id %></td>
-                        <td><%- order.createdAt.toLocaleDateString('en-GB') %></td>
-                        <td><img src="/uploads/cropped/<%- order.productDetails.images.image1 %>" class="img-fluid img-thumbnail" width="90rem" ></td>
-                       
-                        <td> <%= order.payment_method %></td>
-                        
-                        <td <% if (order.items.status == 'Placed') { %>
-                            class="text-uppercase text-primary"
-                            <% } else if (order.items.status == 'Pending') { %>
-                                class="text-uppercase text-secondary"
-                            <% } else if (order.items.status == 'Shipped') { %>
-                                class="text-uppercase text-success"
-                            <% } else if (order.items.status == 'Delivered') { %>
-                                class="text-uppercase text-success"
-                            <% } else if (order.items.status == 'Cancelled') { %>
-                                class="text-uppercase text-danger"
-                            <% } else { %>
-                                class="text-uppercase text-info"
-                            <% } %> 
-                        ><%- order.items.status %></td>
-                        <!-- <td <% if (order.paymentStatus == 'pending') { %>
+  <div class="container table-responsive text-capitalize">
+    <table class="table table-striped table-hover ">
+      <thead>
+        <tr class="text-center">
+          <th scope="col">#</th>
+          <th scope="col">Product</th>
+          <th scope="col">Image</th>
+          <th scope="col">User</th>
+          <th scope="col">Date</th>
+          <th scope="col">Payment</th>
+
+          <th scope="col">Order Status</th>
+          <!-- <th>Payment Status</th> -->
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if (orders && orders.length> 0) { %>
+          <% orders?.forEach((order,index)=> { %>
+            <tr class="align-middle text-center">
+              <td><%- index+1 %></td>
+              <td class="mx-0"><%- order.productDetails.product_name %> </td>
+              <td><img src="/uploads/cropped/<%- order.productDetails.images.image1 %>"
+                  alt="<%- order.productDetails.product_name %>" class="img-fluid img-thumbnail" width="90rem"></td>
+              <td><%- order.user[0].firstName + ' ' + order.user[0].lastName %></td>
+              <td><%- order.createdAt.toLocaleDateString('en-GB') %></td>
+              <td><%- order.paymentMethod %></td>
+
+              <td <% if (order.items.status=='Placed' ) { %>
+                class="text-uppercase text-primary"
+                <% } else if (order.items.status=='Pending' ) { %>
+                  class="text-uppercase text-secondary"
+                  <% } else if (order.items.status=='Shipped' ) { %>
+                    class="text-uppercase text-success"
+                    <% } else if (order.items.status=='Delivered' ) { %>
+                      class="text-uppercase text-success"
+                      <% } else if (order.items.status=='Cancelled' ) { %>
+                        class="text-uppercase text-danger"
+                        <% } else { %>
+                          class="text-uppercase text-info"
+                          <% } %>
+                            ><%- order.items.status %>
+              </td>
+              <!-- <td <% if (order.paymentStatus == 'pending') { %>
                             class="text-uppercase text-primary"
                             <% } else if (order.paymentStatus == 'paid' ) { %>
                                 class="text-uppercase text-success"
@@ -86,91 +95,96 @@
                                 class="text-uppercase text-warning"
                             <% } %> 
                         ><%- order.paymentStatus %></td> -->
-                        <td>
-                          <div class="d-flex justify-content-center">
-                            <% if (order.orderStatus != 'Cancelled') { %>
-                              <a href="/admin/orders/manage-order/<%- order._id %>/?productId=<%- order.items.product_id %>&variant=<%- order.items.variant %>">
-                                <button type="button" class="btn btn-sm btn-danger">
-                                  Manage
-                                </button>  
-                              </a>
-                                <!-- <a href="/admin/orders/manage-order/<%- order._id %>">
+              <td>
+                <div class="d-flex justify-content-center">
+                  <% if (order.orderStatus !='Cancelled' ) { %>
+                    <a
+                      href="/admin/orders/manage-order/<%- order._id %>/?productId=<%- order.items.product_id %>&variant=<%- order.items.variant %>">
+                      <button type="button" class="btn btn-sm btn-primary">
+                        Manage
+                      </button>
+                    </a>
+                    <!-- <a href="/admin/orders/manage-order/<%- order._id %>">
                                 </a> -->
-                                <% } else { %>
-                                  <button type="button" class="btn btn-sm btn-info">
-                                    View
-                                  </button>
-                            <% } %>
-                          </div>
-                        </td>
-                    </tr>
-                <% }) %>
-                <% } else { %>
-                  <td colspan="8" class="text-danger">No Orders Available</td>
-              <% } %>
-            </tbody>
-        </table>
-    </div>
-    <!-- Pagination-->
-    <% if (orders.length > 0 && nextPage || current == pages) { %>
-      <nav aria-label="Product Pagination">
-        <ul class="pagination justify-content-center mt-5">
-          <% if (current == 1) { %>
+                    <% } else { %>
+                      <button type="button" class="btn btn-sm btn-info">
+                        View
+                      </button>
+                      <% } %>
+                </div>
+              </td>
+            </tr>
+            <% }) %>
+              <% } else { %>
+                <td colspan="8" class="text-danger">No Orders Available</td>
+                <% } %>
+      </tbody>
+    </table>
+  </div>
+  <!-- Pagination-->
+  <% if (orders.length> 0 && nextPage || current == pages) { %>
+    <nav aria-label="Product Pagination">
+      <ul class="pagination justify-content-center mt-5">
+        <% if (current==1) { %>
           <li class="page-item disabled">
             <a href="#" class="page-link">First</a>
           </li>
-      
+
           <% } else { %>
-          <li class="page-item">
-            <a href="?page=1" class="page-link">First</a>
-          </li>
-          <% } %>
-      
-          <% var i = (Number(current)> 5 ? Number(current) - 4 : 1) %>
-          <% if (i !== 1) { %>
-          <li class="page-item disabled">
-            <a href="#" class="page-link">...</a>
-          </li>
-          <% } %>
-      
-          <% for( ; i < Number(current) + 4 && i <= pages ; i++ ) { %>
-          <% if (i == current) { %>
-          <li class="page-item disabled">
-            <a href="#" class="page-link"><%= i %> </a>
-          </li>
-          <% } else { %>
-          <li class="page-item">
-            <a href="/admin/orders?page=<%= i %>" class="page-link"><%= i %></a>
-          </li>
-      
-          <% } %>
-          <% if (i == Number(current)+ 4 && i < pages) { %>
-          <li class="page-item disabled">
-            <a href="#" class="page-link">...</a>
-          </li>
-          <% } %>
-      
-          <% } %>
-          <% if (current == pages) { %>
-          <li class="page-item disabled">
-            <a href="#" class="page-link">Last</a>
-          </li>
-          <% } else { %>
-          <li class="page-item">
-            <a href="/admin/orders?page=<%= pages %>" class="page-link">Last</a>
-          </li>
-      
-          <% } %>
-      
-        </ul>
-      </nav>
-      <% } %>
+            <li class="page-item">
+              <a href="?page=1" class="page-link">First</a>
+            </li>
+            <% } %>
+
+              <% var i=(Number(current)> 5 ? Number(current) - 4 : 1) %>
+                <% if (i !==1) { %>
+                  <li class="page-item disabled">
+                    <a href="#" class="page-link">...</a>
+                  </li>
+                  <% } %>
+
+                    <% for( ; i < Number(current) + 4 && i <=pages ; i++ ) { %>
+                      <% if (i==current) { %>
+                        <li class="page-item disabled">
+                          <a href="#" class="page-link">
+                            <%= i %>
+                          </a>
+                        </li>
+                        <% } else { %>
+                          <li class="page-item">
+                            <a href="/admin/orders?page=<%= i %>" class="page-link">
+                              <%= i %>
+                            </a>
+                          </li>
+
+                          <% } %>
+                            <% if (i==Number(current)+ 4 && i < pages) { %>
+                              <li class="page-item disabled">
+                                <a href="#" class="page-link">...</a>
+                              </li>
+                              <% } %>
+
+                                <% } %>
+                                  <% if (current==pages) { %>
+                                    <li class="page-item disabled">
+                                      <a href="#" class="page-link">Last</a>
+                                    </li>
+                                    <% } else { %>
+                                      <li class="page-item">
+                                        <a href="/admin/orders?page=<%= pages %>" class="page-link">Last</a>
+                                      </li>
+
+                                      <% } %>
+
+      </ul>
+    </nav>
+    <% } %>
 </section>
 
 <script defer>
 
   const getOrder = async (orderId, productId, variant) => {
-    console.log({orderId: orderId, productId: productId, variant: variant});
+    console.log({ orderId: orderId, productId: productId, variant: variant });
 
   }
 
