--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,35 +84,31 @@
 
 
     <section class="py-6 brands">
-      <div class="container">
-        <% if (categories !== 'undefined') { %>
+        <div class="container">
+          <% if (categories !== 'undefined') { %>
           <h4 class="text-uppercase text-center mb-5">Categories</h4>
           <!-- Brands Slider-->
-          <div class="owl-carousel owl-theme brands-slider">
-            <!-- item-->
+          <div class="row">
             <% categories?.forEach((category, index) => { %>
-              <div class="item card border-0 d-flex align-items-center justify-content-center">
-                <a href="/shop?category=<%- category._id %>">
-                <div class="w-8rem">
+            <div class="col-md-4 mb-4">
+              <div class="card border-0">
+                <a href="/shop?category=<%- category._id %>" class="text-decoration-none">
                   <% if (category.onOffer) { %>
-                    <div class="ribbon ribbon-info">On offer <%- category.offerDiscountRate %>%</div>
+                  <div class="ribbon ribbon-info">On offer <%- category.offerDiscountRate %>%</div>
                   <% } %>
-                  
-                  <div class="card-img-overlay d-flex align-items-top">
-                    <div class="w-100 py-3">
-                      <p class="display-3 pt-6 text-center text-white fw-semibold fs-3 text-capitalize"><%- category.name %></p>
-                    </div>
-                  </div>  
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-uppercase mb-3"><%- category.name %></h5>
+                    <p class="card-text">Explore now</p>
                   </div>
                 </a>
-                </div>
+              </div>
+            </div>
             <% }) %>
-            
-            
           </div>
-        <% } %>
-      </div>
-    </section>
+          <% } %>
+        </div>
+      </section>
+      
 
 
 
