--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -3,6 +3,7 @@
 
 
 <!-- molla/index-8.html  22 Nov 2019 09:56:59 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,10 +31,11 @@
     <link rel="stylesheet" href="/assets/css/plugins/jquery.countdown.css">
     <link rel="shortcut icon" href="https://demo.bootstrapious.com/sell/2-0-1/img/favicon.png">
 
-     <!-- owl carousel-->
-     <link rel="stylesheet" href="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel/assets/owl.carousel.css">
+    <!-- owl carousel-->
+    <link rel="stylesheet" href="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel/assets/owl.carousel.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Main CSS File -->
@@ -45,20 +47,70 @@
 <body>
     <div class="page-wrapper">
 
-        
+
         <%- include('../partials/user/header.ejs') %>
 
-        
-        <%- include('../partials/flashMessage.ejs') %>
-        <%- body %>
 
-       
-        <%- include('../partials/user/footer.ejs') %>
+            <%- include('../partials/flashMessage.ejs') %>
+                <%- body %>
 
-        
+
+                    <%- include('../partials/user/footer.ejs') %>
+
+                    <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
+
+                    <!-- Mobile Menu -->
+                    <div class="mobile-menu-overlay"></div><!-- End .mobil-menu-overlay -->
+                
+                    <div class="mobile-menu-container">
+                        <div class="mobile-menu-wrapper">
+                            <span class="mobile-menu-close"><i class="icon-close"></i></span>
+                
+                            <form action="/search/" method="get" class="mobile-search">
+                                <label for="mobile-search" class="sr-only">Search</label>
+                                <input type="search" class="form-control" name="mobile-search" id="mobile-search" placeholder="Search in..." required>
+                                <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
+                            </form>
+                            
+                            <nav class="mobile-nav">
+                                <ul class="mobile-menu">
+                                    <li class="active">
+                                        <a href="/">Home</a>
+                
+                                        
+                                    </li>
+                                    <li>
+                                        <a href="/shop">Shop</a>
+                                      
+                                    </li>
+
+                                    <li>
+                                        <a href="/about">About</a>
+                                      
+                                    </li>
+
+                                    <li>
+                                        <a href="/contact">Contact</a>
+                                      
+                                    </li>
+                                   
+                                </ul>
+                            </nav><!-- End .mobile-nav -->
+                
+                            <div class="social-icons">
+                                <a href="#" class="social-icon" target="_blank" title="Facebook"><i class="icon-facebook-f"></i></a>
+                                <a href="#" class="social-icon" target="_blank" title="Twitter"><i class="icon-twitter"></i></a>
+                                <a href="#" class="social-icon" target="_blank" title="Instagram"><i class="icon-instagram"></i></a>
+                                <a href="#" class="social-icon" target="_blank" title="Youtube"><i class="icon-youtube"></i></a>
+                            </div><!-- End .social-icons -->
+                        </div><!-- End .mobile-menu-wrapper -->
+                    </div><!-- End .mobile-menu-container -->
+                
     </div><!-- End .page-wrapper -->
-    
+
     <!-- Plugins JS File -->
+    <!-- Razorpay -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/jquery.hoverIntent.min.js"></script>
@@ -71,6 +123,7 @@
     <!-- Main JS File -->
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/demos/demo-8.js"></script>
+    
     <!-- Bootstrap JavaScript Bundle (Popper.js included)-->
     <script src="https://demo.bootstrapious.com/sell/2-0-1/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Bootstrap Icons -->
@@ -78,9 +131,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Owl Carousel-->
     <script src="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel/owl.carousel.js"></script>
-    <script
-        src="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel2.thumbs/owl.carousel2.thumbs.min.js">
+    <script src="https://demo.bootstrapious.com/sell/2-0-1/vendor/owl.carousel2.thumbs/owl.carousel2.thumbs.min.js">
     </script>
+
 
 </body>
 
