--- a/views/shop/productDetails.ejs
+++ b/views/shop/productDetails.ejs
@@ -19,6 +19,9 @@
                         <div class="product-gallery product-gallery-vertical">
                             <div class="row">
                                     <figure class="product-main-image">
+                                        <% if (product.onOffer) { %>
+                                            <div class="ribbon ribbon-info">On offer <%- product.offerDiscountRate %>%</div>
+                                          <% } %>
                                         <img id="product-zoom" src="/uploads/cropped/<%- product.images.image1 %>"
                                             data-zoom-image="assets/images/products/single/1-big.jpg" alt="product image">
                                     
@@ -54,66 +57,72 @@
                         </div><!-- End .product-gallery -->
                     </div><!-- End .col-md-6 -->
 
-                    <div class="col-md-6">
-                        <div class="product-details">
-                            <h1 class="product-title"><%- product.product_name %></h1><!-- End .product-title -->
-
-                            <div class="ratings-container">
-                                <div class="ratings">
-                                    <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
-                                </div><!-- End .ratings -->
-                                <a class="ratings-text" href="#product-review-link" id="review-link">( 2 Reviews )</a>
-                            </div><!-- End .rating-container -->
-
-                            <div class="product-price">
-                                ₹ <%- product.sellingPrice %>
-                            </div><!-- End .product-price -->
-
-                            <div class="product-content">
-                                <p><%- product.description %> </p>
-                            </div><!-- End .product-content -->
-
-
-                            <div class="details-filter-row details-row-size">
-                                <label for="qty">Qty:</label>
-                                <div class="product-details-quantity">
-                                    <input type="number" id="qty" class="form-control" value="1" min="1" max="10"
-                                        step="1" data-decimals="0" required>
-                                </div><!-- End .product-details-quantity -->
-                            </div><!-- End .details-filter-row -->
-
-                            <div class="product-details-action">
-                                <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-
-                                <div class="details-action-wrapper">
-                                    <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to
-                                            Wishlist</span></a>
-
-                                </div><!-- End .details-action-wrapper -->
-                            </div><!-- End .product-details-action -->
-
-                            <div class="product-details-footer">
-                                <div class="product-cat row">
-                                    <span class="col-md-12">Category:</span>
-                                    <% categories?.forEach((category, index)=> { %>
-                                        <div class="col-md-4 mb-4">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    <h5 class="card-title text-center text-muted text-capitalize">
-                                                        <a href="#" class="text-decoration-none "
-                                                            style="text-decoration: none; ">
-                                                            <%- category.name %>
-                                                        </a>
-                                                    </h5>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <% if ((index + 1) % 3===0) { %>
-                                            <div class="w-100"></div> <!-- Add a new row after every third category -->
-                                            <% } %>
-                                                <% }) %>
-                                </div><!-- End .product-cat -->
-                            </div>
+                    <div class="col-lg-5 ps-lg-4 order-1 order-lg-2">
+                        <ul class="breadcrumb undefined">
+                          <li class="breadcrumb-item"><a href="/">Home</a></li>
+                          <li class="breadcrumb-item"><a href="/shop">Shop</a></li>
+                          <li class="breadcrumb-item active"><%- product.product_name %></li>
+                        </ul>
+                        <h1 class="mb-4"><%- product.product_name %></h1>
+                        <div class="d-flex flex-column flex-sm-row align-items-sm-center justify-content-sm-between mb-4">
+                          <ul class="list-inline mb-2 mb-sm-0">
+                            <li class="list-inline-item h4 fw-light mb-0">
+                              <% if (!product.onOffer) { %>
+                                ₹<%- product.sellingPrice  %>
+                              <% } else { %>   
+                                  ₹<%- product.offerDiscountPrice %>
+                              <% } %>
+                            </li>
+                            <li class="list-inline-item text-muted fw-light">
+                              <% if (!product.onOffer) { %>
+                                <del>
+                                  ₹<%- product.actualPrice %>
+                                </del>
+                                <% } else { %>   
+                                  <del>
+                                    ₹<%- product.sellingPrice  %>
+                                  </del>
+                              <% } %>
+                            </li>
+                          </ul>
+                          <div class="d-flex align-items-center">
+                            <ul class="list-inline me-2 mb-0">
+                              <li class="list-inline-item me-0">
+                                <i class="bi bi-star text-primary"></i>
+                              </li>
+                              <li class="list-inline-item me-0">
+                                <i class="bi bi-star text-primary"></i>
+                              </li>
+                              <li class="list-inline-item me-0">
+                                <i class="bi bi-star text-primary"></i>
+                              </li>
+                              <li class="list-inline-item me-0">
+                                <i class="bi bi-star text-primary"></i>
+                              </li>
+                              <li class="list-inline-item me-0">
+                                <i class="bi bi-star text-gray-300"></i>
+                              </li>
+                            </ul>
+                            <span class="text-muted text-uppercase text-sm"> reviews</span>
+                          </div>
+                        </div>
+                        <p class="mb-4 text-muted"><%- product.description %></p>
+                        <div class="row">
+                
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                  <button class="btn btn-success mb-1" onclick="addToCart('<%- product._id %>')">
+                                    <i class="bi bi-cart me-2"></i>
+                                    Add to Cart
+                                  </button>
+                                </li>
+                                <li class="list-inline-item">
+                                  <button class="btn btn-outline-danger mb-1" onclick="addToWishlist('<%- product._id %>')">
+                                    <i class="bi bi-heart me-2"></i>
+                                    Add to wishlist
+                                  </button>
+                                </li>
+                              </ul>
 
                             <div class="social-icons social-icons-sm">
                                 <span class="social-label">Share:</span>
@@ -479,3 +488,84 @@
  <script src="assets/js/jquery.magnific-popup.min.js"></script>
  <!-- Main JS File -->
  <script src="assets/js/main.js"></script>
+
+ <script defer>
+    const addToCart = async (productId) => {
+        console.log(productId);
+        try {
+            const response = await fetch(`/user/add-to-cart/${productId}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+
+            const data = await response.json()
+
+            if (!response.ok) {
+                throw new Error(data.message);
+            }
+
+            Swal.fire({
+                title: 'Success!',
+                text: 'Product added to cart successfully.',
+                icon: 'success',
+                confirmButtonText: 'OK'
+            });
+        } catch (error) {
+            Swal.fire({
+                title: 'Error!',
+                text: error.message,
+                icon: 'error',
+                confirmButtonText: 'OK'
+            });
+        }
+    }
+
+    const addToWishlist = async (productId) => {
+    try {
+      const response = await fetch(`/user/add-to-wishlist/`, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          productId,
+        }),
+      });
+  
+      if (!response.ok) {
+        const errorData = await response.json();
+        throw new Error(errorData.message || 'Network response was not ok.');
+      }
+  
+      const data = await response.json();
+      if(data.success){
+      Swal.fire({
+        icon: "success",
+        title: "Added to Wishlist",
+        text: "Your product has been added to the wishlist.",
+        confirmButtonText: "OK",
+  
+      });
+    }else{
+      Swal.fire({
+        icon: "error",
+        title: "Error",
+        text: data.message,
+        confirmButtonText: "OK",
+  
+      });
+    }
+    } catch (error) {
+      console.log(error);
+      Swal.fire({
+        icon: "error",
+        title: "Oops...",
+        text: error.message, // Display the actual error message
+      });
+    }
+  };
+  
+
+ </script>
